# unicode-linebreak-chunked

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: iter_utils.rs  lib.rs
tests/: test_default.rs
