[package]
name = "unicode-linebreak-chunked"
version = "0.1.0"
authors = ["Tau Gärtli"]
description = "Implementation of the Unicode Line Breaking Algorithm"
repository = "https://github.com/bash/unicode-linebreak-chunked"
readme = "README.md"
keywords = ["unicode", "text", "layout"]
categories = ["internationalization"]
license = "Apache-2.0"
include = ["src/**/*", "LICENSE"]
edition = "2021"
rust-version = "1.56"
